--- a/application/layouts/scripts/layout-admin.phtml
+++ b/application/layouts/scripts/layout-admin.phtml
@@ -4,12 +4,12 @@
         <?php echo $this->headTitle() ?>
         <?php echo $this->headMeta() ?>
         <?php echo $this->headStyle() ?>
-        <link rel="stylesheet" type="text/css" href="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/css/datePicker.css"/>
+<!--    <link rel="stylesheet" type="text/css" href="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/css/datePicker.css"/>
         <link rel="stylesheet" type="text/css" href="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/css/pro_dropline.css"/>
         <link rel="stylesheet" type="text/css" href="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/css/pro_dropline_ie.css"/>
-        <link rel="stylesheet" type="text/css" href="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/css/screen.css"/>
+        <link rel="stylesheet" type="text/css" href="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/css/screen.css"/>-->
         <?php echo $this->headLink() ?>
-        <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/custom_jquery.js"></script>
+<!--        <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/custom_jquery.js"></script>
         <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/date.js"></script>
         <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/jquery-1.4.1.min.js"></script>
         <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/jquery.bind.js"></script>
@@ -22,7 +22,7 @@
         <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/jquery.tooltip.js"></script>
         <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/jquery.usermode.js"></script>
         <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/ui.checkbox.js"></script>
-        <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/ui.core.js"></script>
+        <script src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/js/ui.core.js"></script>-->
         
         <?php echo $this->headScript() ?>
     </head>
@@ -30,7 +30,7 @@
         <?php echo $this->layout()->content ?>
 
     <div class="grid_2">
-        <p>footerssssssssssssssssssssssssssss</p>
+        
     </div>
         
     </body>
