--- a/application/modules/default/views/scripts/soluciones/index.phtml
+++ b/application/modules/default/views/scripts/soluciones/index.phtml
@@ -33,12 +33,12 @@
                             ?>
                             <li>
                                 <div class="ItemSolucionesProductosDestacadosImagen">
-                                <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/soluciones/detalle-solucion/<?php echo $index['SlugSoluciones']; ?>" >
+                                <a href="/soluciones/detalle-solucion/<?php echo $index['SlugSoluciones']; ?>" >
                                     <img src="<?php echo CST_Server_ServerDinamic::getUrl();?>/img/imagen-soluciones/<?php echo $index['ImagenSoluciones']; ?>" width="16" height="16" align="absmiddle" /> 
                                 </a> 
                                 </div>
                                 <div class="ItemSolucionesProductosDestacadosNombre">
-                                    <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/soluciones/detalle-solucion/<?php echo $index['SlugSoluciones']; ?>" ><?php echo $index['NombreSoluciones']; ?> </a>
+                                    <a href="/soluciones/detalle-solucion/<?php echo $index['SlugSoluciones']; ?>" ><?php echo $index['NombreSoluciones']; ?> </a>
                                 </div>
                                 <div class="clear"></div>
                             </li>
