--- a/application/modules/admin/views/scripts/marca/index.phtml
+++ b/application/modules/admin/views/scripts/marca/index.phtml
@@ -1,12 +1,11 @@
 <div>
-    [<a href="/admin/categoria/create-categoria">Nueva Marca</a>]
+    [<a href="/admin/marca/create-marca">Nueva Marca</a>]
 </div>
 <hr></hr>
 <table>
     <tr>
         <td>IdMarca<hr></hr></td>
-        <td>Nombre<hr></hr></td>
-        <td>slugMarca<hr></hr></td>
+        <td>Nombre<hr></hr></td>        
         <td>Imagen<hr></hr></td>
         <td colspan="2" >Acciones<hr></hr></td>
     </tr>
@@ -15,11 +14,10 @@
 ?>
     <tr>
         <td><?php echo $index['IdMarca'] ?></td>
-        <td><?php echo $index['NombreMarca'] ?></td>
-        <td><?php echo $index['SlugMarca']?></td>
+        <td><?php echo $index['NombreMarca'] ?></td>        
         <td><?php echo $index['ImagenMarca'] ?></td>
-        <td>[<a href="/admin/categoria/edit-categoria/cat/<?php echo $index['idCategoriaProducto'] ?>">Editar</a>]</td>
-        <td>[<a href="/admin/categoria/delete-categoria/cat/<?php echo $index['idCategoriaProducto'] ?>">Eliminar</a>]</td>       
+        <td>[<a href="/admin/marca/edit-marca/idmarca/<?php echo $index['IdMarca'] ?>">Editar</a>]</td>
+        <td>[<a href="/admin/marca/delete-marca/idmarca/<?php echo $index['IdMarca'] ?>">Eliminar</a>]</td>       
     </tr>
 
 <?php } ?>
